--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -24,20 +24,45 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r2X-to-hfp">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <items>
+                                    <navigationItem id="Kf8-rx-6ek">
+                                        <nil key="title"/>
+                                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="eeb-KH-31q">
+                                            <rect key="frame" x="150" y="7.5" width="300" height="29"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="All"/>
+                                                <segment title="Music"/>
+                                                <segment title="Software"/>
+                                                <segment title="E-books"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="segmentChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="kbn-xa-ysQ"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="KzJ-Gc-EGj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="13W-b7-0iw"/>
                             <constraint firstAttribute="trailing" secondItem="YbK-4L-2m1" secondAttribute="trailing" id="74P-ol-my3"/>
+                            <constraint firstItem="r2X-to-hfp" firstAttribute="top" secondItem="KzJ-Gc-EGj" secondAttribute="bottom" id="BZv-je-fou"/>
                             <constraint firstItem="YbK-4L-2m1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Be0-My-Q3t"/>
                             <constraint firstItem="KzJ-Gc-EGj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Iv5-KB-dke"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YbK-4L-2m1" secondAttribute="bottom" id="PFo-9N-s32"/>
                             <constraint firstAttribute="trailing" secondItem="KzJ-Gc-EGj" secondAttribute="trailing" id="QiT-wV-wNd"/>
+                            <constraint firstAttribute="trailing" secondItem="r2X-to-hfp" secondAttribute="trailing" id="Tp1-VF-rqj"/>
+                            <constraint firstItem="r2X-to-hfp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="X8i-Ni-LHT"/>
                             <constraint firstItem="YbK-4L-2m1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cMn-u2-TTu"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="searchBar" destination="KzJ-Gc-EGj" id="cuu-GH-P0X"/>
+                        <outlet property="segmentedControl" destination="eeb-KH-31q" id="MOl-Jc-oXH"/>
                         <outlet property="tableView" destination="YbK-4L-2m1" id="YQ4-ZN-MnQ"/>
                     </connections>
                 </viewController>
